--- a/index.HTML
+++ b/index.HTML
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeira pagina</title>
+    <title>meus links larissa</title>
 </head>
-<body style="background-color: rgb(18, 3, 80);">
-   <h1 style="color: blanchedalmond;">Minha primeira página</h1>
-   <img src="desenho-de-adesivo-com-planta-em-um-vaso-isolado_1308-58441.png" alt="planta dentro de um vaso" style="width: 200px;"> 
+<body>
+    <div>
+        <header>
+            <img src="desenho-de-adesivo-com-planta-em-um-vaso-isolado_1308-58441.png" alt="minha foto">
+                 <h1>larissa molon</h1>
+                 <link rel="stylesheet" href="styles.css">
+            <p>sejam bem vindo! Abaixo estão os links principais</p>
+        </header>
+    </div>
 </body>
 </html
