--- a/index.HTML
+++ b/index.HTML
@@ -6,9 +6,9 @@
     <title>meus links larissa</title>
 </head>
 <body>
-    <div>
-        <header>
-            <img src="desenho-de-adesivo-com-planta-em-um-vaso-isolado_1308-58441.png" alt="minha foto">
+    <div class="container">
+        <header class="perfil">
+            <img src="diana.jpg" alt="minha foto" class="foto-perfil">
                  <h1>larissa molon</h1>
                  <link rel="stylesheet" href="styles.css">
             <p>sejam bem vindo! Abaixo estão os links principais</p>
