--- a/index.HTML
+++ b/index.HTML
@@ -13,6 +13,11 @@
                  <link rel="stylesheet" href="styles.css">
             <p>sejam bem vindo! Abaixo estão os links principais</p>
         </header>
+        <main class="links">
+<a href="https://www.instagram.com/eh_molon" target="_blank" class="botao-instagram">
+    <i class="fab fa-instagram"></i>instagram
+</a>
+        </main>
     </div>
 </body>
 </html
