--- a/index.HTML
+++ b/index.HTML
@@ -13,8 +13,8 @@
                  <link rel="stylesheet" href="styles.css">
             <p>sejam bem vindo! Abaixo estão os links principais</p>
         </header>
-        <main class="links">
-<a href="https://www.instagram.com/eh_molon" target="_blank" class="botao-instagram">
+        <main class="link">
+<a href="https://www.instagram.com/eh_molon" target="_blank" class="link-botao instagram">
     <i class="fab fa-instagram"></i>instagram
 </a>
         </main>
